--- a/css/app.css
+++ b/css/app.css
@@ -107,3 +107,33 @@ h1 {
     float: right;
     cursor: pointer;
 }
+.end-game-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: white;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    padding: 15%;
+    display: none;
+}
+.end-game-show {
+    display: block;
+}
+.end-game-results {
+    width: 50%;
+    height: 50%;
+    background: white;
+    margin: 0 auto;
+}
+.congrats-message, .end-game-stats, .end-game-time-message {
+    text-align: center;
+}
+.play-again {
+    color: white;
+    display: block;
+    margin: 0 auto;
+    background: #33cc33;
+    padding: .75em 5em;
+}
